applications/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 65e12090-5d1b-4f96-857e-6bbf0f8c208d
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  loadBalancerSourceRanges:
  loadBalancerIP: 121.36.66.79
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
spec:
  ports:
    - name: slavelistener
      port: 50000
      # we need pin the node port here in order to be visitable via node
      nodePort: 30050
      targetPort: 50000
  type: NodePort
