applications/jenkins/ingress-huawei.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-ingress-huawei
spec:
  tls:
    - hosts:
        - ci.ascend.huawei.com
      secretName: website-secrets
  rules:
    - host: ci.ascend.huawei.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 80
            path: /
